loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:9: error: not found: value estSurRose
  if (estSurRose()) {
      ^